[package]
name = "newspenguin-rss-bot"
authors = ["Seungjin Kim <seungjin@duck.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
rss = "2.0"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
url = "2.5.4"
urlencoding = "2"
wasi = "0.13.1"
dotenvy = "0.15.7"

[package.metadata.component]
package = "component:newspenguin-rss-bot"

[package.metadata.component.target]
path = "wit"
world = "bot"

[package.metadata.component.dependencies]
"wasi:cli" = "0.2.0"
"wasi:http" = "0.2.0"
"wasi:io" = "0.2.0"
