[package]
name = "theguardian-rss-bot"
authors = ["Seungjin Kim <seungjin@duck.com>"]
license = "MIT OR Apache-2.0"
version = "0.0.1"
edition = "2021"

[dependencies]
rss = "2.0"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
url = "2.5.4"
urlencoding = "2"
wasi = "0.13.1"
html2text = "0.17.1"

[package.metadata.component]
package = "component:theguardian-rss-bot"
